# fedora-gpu-manager

./: Cargo.toml  README.md  fedora-gpu-manager.desktop  fedora-gpu-manager.spec
src/: main.old  main.rs  nvidia_branch.rs
