[package]
name        = "fedora-gpu-manager"
version     = "1.0.0"
edition     = "2021"
description = "GPU driver detection and management for Fedora"
license     = "GPL-3.0-or-later"
authors     = ["Ran Morgan"]

[[bin]]
name = "fedora-gpu-manager"
path = "src/main.rs"

[dependencies]
gtk4         = { version = "0.9", features = ["v4_12"] }
libadwaita   = { version = "0.7", features = ["v1_4"]  }
regex        = "1"
once_cell    = "1"
async-channel = "2"
